--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -140,6 +140,7 @@
                     <img src="{{ asset('images/user.png') }}" class="rounded-circle user-photo" alt="User Profile Picture">
                     <div class="dropdown">
                         {% set user_role = 'roles.' ~ app.user.roles[0] %}
+                        {% set user_name = app.user.firstname ~ "  " ~ app.user.lastname %}
                         <span>{{ user_role|trans }} {{ 'sidebar.menu.welcome'|trans }}</span>
                         <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>{{ user_name }}</strong></a>
                         <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
