--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -1,20 +1,87 @@
-{% extends 'base.html.twig' %}
+{% trans_default_domain 'ums' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/dataTables.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% endblock %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/PurchaseController.php'|file_link(0) }}">src/Controller/PurchaseController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/purchase/index.html.twig'|file_link(0) }}">templates/purchase/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block main_content %}
+    <div id="main-content">
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="body">
+                            <button id="addToTable" class="btn btn-primary m-b-15" type="button">
+                                <i class="icon wb-plus" aria-hidden="true"></i> {{ 'purchase_page.index.add_row'|trans }}
+                            </button>
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped" cellspacing="0" id="addrowExample">
+                                    <thead>
+                                    <tr>
+                                        <th>{{ 'purchase_page.purchase_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.user_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.product_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.date_purchase'|trans }}</th>
+                                        <th>{{ 'purchase_page.purchase_tracking_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.quantity'|trans }}</th>
+                                        <th>{{ 'purchase_page.activity'|trans }}</th>
+                                    </tr>
+                                    </thead>
+                                    <tfoot>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Position</th>
+                                        <th>Office</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                    </tfoot>
+                                    <tbody>
+                                    <tr class="gradeA">
+                                        <td>Martena Mccray</td>
+                                        <td>Post-Sales support</td>
+                                        <td>Edinburgh</td>
+                                        <td>Edinburgh</td>
+                                        <td>Edinburgh</td>
+                                        <td>Edinburgh</td>
+                                        <td class="actions">
+                                            <button class="btn btn-sm btn-icon btn-pure btn-default on-editing m-r-5 button-save"
+                                                    data-toggle="tooltip" data-original-title="Save" hidden><i class="icon-drawer" aria-hidden="true"></i></a>
+                                                <button class="btn btn-sm btn-icon btn-pure btn-default on-editing button-discard"
+                                                        data-toggle="tooltip" data-original-title="Discard" hidden><i class="icon-close" aria-hidden="true"></i></a>
+                                                    <button class="btn btn-sm btn-icon btn-pure btn-default on-default m-r-5 button-edit"
+                                                            data-toggle="tooltip" data-original-title="Edit"><i class="icon-pencil" aria-hidden="true"></i></a>
+                                                        <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
+                                                                data-toggle="tooltip" data-original-title="Remove"><i class="icon-trash" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+
+                                    </tbody>
+                                </table>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles_js/datatablescripts.bundle.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/dataTables.buttons.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.bootstrap4.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.colVis.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.html5.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
+    <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
+    <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
 {% endblock %}
