--- a/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
+++ b/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
@@ -1,5 +1,79 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends 'layout.html.twig' %}
+{% trans_default_domain 'ums' %}
 
-{% block fos_user_content %}
-{% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block sidebar %}
+    {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "", "active", "", "", "", "", "", "", "active", "" %}
+    {{ parent() }}
+{% endblock %}
+
+{% block main_content %}
+    <div id="main-content" class="profilepage_2">
+        <div class="container-fluid">
+            <div class="block-header">
+                <div class="row">
+                    <div class="col-lg-6 col-md-8 col-sm-12">
+                        <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
+                                        class="fa fa-arrow-left"></i></a>{{ 'profile_page.title'|trans }}</h2>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
+                            <li class="breadcrumb-item active">{{ 'profile_page.title'|trans }}</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-12 text-right">
+                        <div class="bh_chart hidden-xs">
+                            <div class="float-left m-r-15">
+                                <small>Visitors</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
+                            </div>
+                            <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Visits</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
+                            </div>
+                            <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Chats</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
+                            </div>
+                            <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-8 col-md-12" style="margin:auto">
+                <div class="card">
+                    <div class="body">
+                        {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+                        <div class="form-control-errors">
+                            <small class="text-muted ">{{ form_label(form.current_password) }}:</small>
+                            <p> {{ form_widget(form.current_password, {'attr': {'class': 'form-control'}}) }}</p>
+                            <p> {{ form_errors(form.current_password) }} </p>
+                        </div>
+                        <div class="form-control-errors">
+                            <small class="text-muted">{{ form_label(form.plainPassword.first) }}:</small>
+                            <p> {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}</p>
+                            <p> {{ form_errors(form.plainPassword.first) }} </p>
+                        </div>
+                        <div class="form-control-errors">
+                            <small class="text-muted">{{ form_label(form.plainPassword.second) }}:</small>
+                            <p> {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}</p>
+                            <p> {{ form_errors(form.plainPassword.second) }} </p>
+                            <hr>
+                        </div>
+                        <div class="text-center">
+                            <input type="submit" class="btn btn-primary" value="{{ 'profile_page.btn'|trans }}">&nbsp;&nbsp;
+                            <a href="/profile" class="btn btn-default">{{ 'profile_page.cancel'|trans }}</a>
+                        </div>
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+{% endblock %}
