--- a/templates/user/userList_users.html.twig
+++ b/templates/user/userList_users.html.twig
@@ -13,10 +13,10 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-8 col-sm-12">
                         <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
-                                        class="fa fa-arrow-left"></i></a>{{ 'userList_pages.users.title'|trans }}</h2>
+                                        class="fa fa-arrow-left"></i></a>{{ 'userList_pages.title_users'|trans }}</h2>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
-                            <li class="breadcrumb-item active">{{ 'userList_pages.users.title'|trans }}</li>
+                            <li class="breadcrumb-item active">{{ 'userList_pages.title_users'|trans }}</li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-4 col-sm-12 text-right">
